<?xml version="1.0"?>

<package format="2">
  <name>stretch_description</name>
  <version>0.2.0</version>
  <description>The stretch_description package</description>

  <maintainer email="support@hello-robot.com">Hello Robot Inc.</maintainer>

  <license>Clear BSD</license>

  <buildtool_depend>catkin</buildtool_depend>


  <build_depend>roslaunch</build_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>

  </export>

</package>
