<?xml version="1.0"?>
<package format="2">
  <name>stretch_funmap</name>
  <version>0.2.0</version>
  <description>The stretch_funmap package</description>

  <maintainer email="support@hello-robot.com">Hello Robot Inc.</maintainer>
  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>ros_numpy</exec_depend>

  <depend>python3</depend>

  <export>
  </export>
</package>
